plugins {
    id 'java'
    id 'application'
    id 'com.gradleup.shadow' version "9.2.2"
}

application {
    mainClass = 'com.ontrexdex.trexbot.TrexBot'
}

version = '3.0-beta' // Im bad about actually updating this number

repositories {
    mavenCentral()
    maven {
        url = 'https://maven.lavalink.dev/releases'
    }
    maven {
        name = 'm2-duncte123'
        url = 'https://m2.duncte123.dev/releases'
    }
    maven {
        url = 'https://maven.lavalink.dev/releases'
    }
    maven {
        url = 'https://jitpack.io' }
}

dependencies {
    implementation 'io.github.cdimascio:dotenv-java:3.2.0'
    implementation 'net.dv8tion:JDA:6.1.1'

    implementation group: 'me.duncte123', name: 'botCommons', version: '3.1.18'

    implementation 'dev.arbjerg:lavaplayer:2.2.4'
    implementation 'dev.lavalink.youtube:v2:1.16.0'
    implementation group: 'com.google.apis', name: 'google-api-services-youtube', version: 'v3-rev20250714-2.0.0'
    implementation group: 'com.google.http-client', name: 'google-http-client-gson', version: '2.0.2'

    implementation 'club.minnced:discord-webhooks:0.8.4'
    implementation 'ch.qos.logback:logback-classic:1.5.21'
}

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes(
                'Main-Class': 'com.ontrexdex.trexbot.TrexBot'
        )
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

compileJava {
    options.encoding = 'UTF-8'
}
